# ctf_pizza

./: .gitignore  CMakeLists.txt  Pipfile  README.md  dbinit.sql  exploit_client_signed_token.py  exploit_debugmode.sh  exploit_nonealg.py  exploit_path_traversal.sh  getflag.py  info.json  info.yaml  info.yml  init.sh  order.db  post_sample_orders.sh  setflag.py
.devcontainer/: Dockerfile  devcontainer.json
include/cpp-jwt/jwt/: algorithm.hpp  base64.hpp  error_codes.hpp  jwt.hpp  parameters.hpp  string_view.hpp
include/sqlite_modern_cpp/: .deps  Makefile  config.status  sqlite_modern_cpp.pc
include/sqlite_modern_cpp/tests/: blob_example.result  boost_optional.result  boost_optional.test  error_log.result  error_log.test  error_log2.result  error_log2.test  exception_dont_execute.result  exception_dont_execute.test  exception_dont_execute_nested.result  exception_dont_execute_nested.test  exceptions.result  exceptions.test  extended_exceptions.result  extended_exceptions.test  flags.result  functions.result  functors.result  lvalue_functor_example.result  lvalue_functor_example.result_  lvalue_functor_example.test  mov_ctor.result  mov_ctor.test  nullptr_uniqueptr.result  prepared_statment.result  readme_example.result  readme_example.result_  readme_example.test  shared_connection.result  simple_examples.result  sqlcipher.result  sqlcipher.test  std_optional.result  (+5 more)
rsa_keys/: priv_key.pem  pub_key.pem
src/: http_server.cpp  http_server.hpp  responses.cpp  server.cpp  utils.cpp  utils.hpp
static/: bs_orig.html  index.html  receipt_page.html  script.js
(+2 files in other folders)
